Disabled mobile items, use later

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <strong>Damn!!</strong> No numbers or such, Ken plays hardcore, no effen around!
         </div>
         <h4 id="instruct">use keyboard to enter letters.</h4>
-        <input type="text" id="touch_input" name="letter">
+        <!-- <input type="text" id="touch_input" name="letter"> do later-->
         <div class="btn-toolbar">
           <button type="button" class="btn btn-info mr-2" type="submit" id="play_again">Play again</button>
           <button type="button" class="btn btn-warning text-white" type="submit" id="quit">No, I'm done</button>
