changed title tag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <script type="text/javascript" src="assets/javascript/data.json"></script>
-  <title>Colors Testing</title>
+  <title>Ken's Colors</title>
 </head>
 
 <body>
